修改使用说明文档

--- a/doc/使用说明.md
+++ b/doc/使用说明.md
@@ -18,7 +18,9 @@ Vita版追加剧情语音的外挂程序
 1.  将PC游戏对应的PS
     Vita版游戏的语音文件（\*.at9）导出，并转换为wav文件，并将这些wav文件放到本工具所在目录的zero.voice(零)或ao.voice(碧)文件夹下。
 
-2.  运行游戏和本工具（先后次序并不重要，但是若在游戏进行中运行本工具，本工具只会在载入下一个场景的时候开始生效）
+2.  将各个scena文件对应的语音表文件(\*.tbl)，置于本工具所在目录的zero.tbl或ao.tbl文件夹下
+
+3.  运行游戏和本工具（先后次序并不重要，但是若在游戏进行中运行本工具，本工具只会在载入下一个场景的时候开始生效）
 
 本工具的适用
 ------------
@@ -35,7 +37,7 @@ Vita版追加剧情语音的外挂程序
 注意事项：
 ----------
 
-1.  本工具仅是一个播放语音的外挂程序，您需要自行准备好通过合法途径获得的PC版游戏本体用于运行游戏，以及PSVita版游戏用于导出语音文件。请勿向我们咨询游戏本体或语音文件的获得方法。
+1.  本工具仅是一个播放语音的外挂程序，您需要自行准备好通过合法途径获得的PC版游戏本体用于运行游戏，以及PSVita版游戏用于导出语音文件。请勿向我们咨询游戏本体或语音文件的获得方法。另外，本工具不会对您的游戏作任何改动，本工具的功能的实现也仅限于本工具运行的时候。
 
 2.  并没有必要将本工具放置到游戏的安装目录下（当然即使您这么做了，也并无不良影响）
 
