--- a/doc/使用说明.md
+++ b/doc/使用说明.md
@@ -16,11 +16,11 @@ Vita版追加剧情语音的外挂程序
 --------------
 
 1.  将PC游戏对应的PS
-    Vita版游戏的语音文件（\*.at9）导出，并转换为wav文件，并将这些wav文件放到本工具所在目录的zero.voice(零)或ao.voice(碧)文件夹下。
+    Vita版游戏的语音文件（解包各种.psarc文件后，talk文件夹下的所有.at9文件）导出，并转换为wav文件（比如通过at9tool.exe这个工具），并将这些wav文件放到本工具所在目录的zero.voice(零)或ao.voice(碧)文件夹下。
 
-2.  将各个scena文件对应的语音表文件(\*.tbl)，置于本工具所在目录的zero.tbl或ao.tbl文件夹下
+2.  将各个scena文件（指的是scena文件夹下的.bin文件）对应的语音表文件(\*.tbl)，置于本工具所在目录的zero.tbl或ao.tbl文件夹下
 
-3.  运行游戏和本工具（先后次序并不重要，但是若在游戏进行中运行本工具，本工具只会在载入下一个场景的时候开始生效）
+3.  运行游戏和本工具ZeroAoVoiceTool.exe（先后次序并不重要，但是若在游戏进行中运行本工具，本工具只会在载入下一个场景的时候开始生效）
 
 本工具的适用
 ------------
@@ -31,7 +31,7 @@ Vita版追加剧情语音的外挂程序
 
 2.  《英雄传说：碧之轨迹》简体中文版，版本1.0。
 
-以上适用项目均指游戏在中国大陆的发行商北京欢乐百世科技有限公司发行的简体中文版游戏的原始版本（零之轨迹需要1.1补丁，[补丁下载地址](http://pan.baidu.com/s/1jGjy62M)），其他版本，或在上述版本上进行过修改的
+以上适用项目均指游戏在中国大陆的发行商北京欢乐百世科技有限公司发行的简体中文版游戏的原始版本（零之轨迹需要1.1补丁，[官方补丁下载地址](http://pan.baidu.com/s/1jGjy62M)），其他版本，或在上述版本上进行过修改的
 版本均无法保证本工具的正常运行。另外，北京欢乐百世科技有限公司于近日推出了这两个游戏的JOYO平台版，目前尚不清楚本工具对该版本的支持情况。
 
 注意事项：
@@ -39,15 +39,29 @@ Vita版追加剧情语音的外挂程序
 
 1.  本工具仅是一个播放语音的外挂程序，您需要自行准备好通过合法途径获得的PC版游戏本体用于运行游戏，以及PSVita版游戏用于导出语音文件。请勿向我们咨询游戏本体或语音文件的获得方法。另外，本工具不会对您的游戏作任何改动，本工具的功能的实现也仅限于本工具运行的时候。
 
-2.  并没有必要将本工具放置到游戏的安装目录下（当然即使您这么做了，也并无不良影响）
+2.  一切准备就绪时，目录及文件结构大致如下：
 
-3.  关于语音文件转换后的文件名，原文件名为v1234567.at9的语音文件转换后的文件名需为v1234567.wav
+            ao.voice   -------- 文件夹，其下为各种.wav（用于碧）。注意：这里不支持子目录
+        
+            ao.tbl     -------- 文件夹，其下为各种.tbl（用于碧）。注意：这里不支持子目录
+        
+            zero.voice -------- 文件夹，其下为各种.wav（用于零）。注意：这里不支持子目录
+        
+            zero.tbl   -------- 文件夹，其下为各种.tbl（用于零）。注意：这里不支持子目录
+        
+            使用说明.md
+        
+            ZeroAoVoiceTool.exe
+        
+            ZaVoiceConfig.ini -- 配置文件
 
-4.  wav文件需直接放到语音文件夹下（zero.voice或ao.voice），不支持子目录
+3.  作为样例，已附带适用于零、碧各一套的完整语音表（.tbl）文件
 
-5.  请确保本工具所在目录下存在语音表文件夹（zero.tbl或ao.tbl），且文件夹下存在语音表文件(\*.tbl)
+4.  并没有必要将本工具放置到游戏的安装目录下（当然即使您这么做了，也并无不良影响）
 
-6.  您可以通过修改ZaVoiceConfig.ini来修改语音文件或语音表文件所在的文件夹路径（相对或绝对路径）
+5.  关于语音文件转换后的文件名，原文件名为v1234567.at9的语音文件转换后的文件名需为v1234567.wav
+
+6.  您可以通过修改配置文件ZaVoiceConfig.ini来修改语音文件或语音表文件所在的文件夹路径（相对或绝对路径）
 
 7.  配置ZaVoiceConfig.ini中的项目DisableOriginalVoice = 1
     可开启本工具的实验性功能，即禁用游戏原本剧情语音的功能（仅限碧之轨迹，仅限剧情语音，不包括语气语音）。若启动了本功能，即使退出了本工具，在重启游戏前，所作的改动将一直有效。
