--- a/doc/使用说明.md
+++ b/doc/使用说明.md
@@ -16,7 +16,7 @@ Vita版追加剧情语音的外挂程序
 --------------
 
 1.  将PC游戏对应的PS
-    Vita版游戏的语音文件（解包各种.psarc文件后，talk文件夹下的所有.at9文件）导出，并转换为wav文件（比如通过at9tool.exe这个工具），并将这些wav文件放到本工具所在目录的zero.voice(零)或ao.voice(碧)文件夹下。
+    Vita版游戏的语音文件（解包各种.psarc文件后，talk文件夹下的所有.at9文件）导出，并转换为wav或ogg文件，并将转换之后的文件放到本工具所在目录的zero.voice(零)或ao.voice(碧)文件夹下。
 
 2.  将各个scena文件（指的是scena文件夹下的.bin文件）对应的语音表文件(\*.tbl)，置于本工具所在目录的zero.tbl或ao.tbl文件夹下
 
@@ -41,13 +41,13 @@ Vita版追加剧情语音的外挂程序
 
 2.  一切准备就绪时，目录及文件结构大致如下：
 
-            ao.voice   -------- 文件夹，其下为各种.wav（用于碧）。注意：这里不支持子目录
+            ao.voice   -------- 文件夹，其下为\*.wav或\*.ogg（用于碧）。注意：这里不支持子目录
         
-            ao.tbl     -------- 文件夹，其下为各种.tbl（用于碧）。注意：这里不支持子目录
+            ao.tbl     -------- 文件夹，其下为\*.tbl（用于碧）。注意：这里不支持子目录
         
-            zero.voice -------- 文件夹，其下为各种.wav（用于零）。注意：这里不支持子目录
+            zero.voice -------- 文件夹，其下为\*.wav或\*.ogg（用于零）。注意：这里不支持子目录
         
-            zero.tbl   -------- 文件夹，其下为各种.tbl（用于零）。注意：这里不支持子目录
+            zero.tbl   -------- 文件夹，其下为\*.tbl（用于零）。注意：这里不支持子目录
         
             使用说明.md
         
@@ -59,7 +59,7 @@ Vita版追加剧情语音的外挂程序
 
 4.  并没有必要将本工具放置到游戏的安装目录下（当然即使您这么做了，也并无不良影响）
 
-5.  关于语音文件转换后的文件名，原文件名为v1234567.at9的语音文件转换后的文件名需为v1234567.wav
+5.  关于语音文件转换后的文件名，原文件名为v1234567.at9的语音文件转换后的文件名需为v1234567.wav或v1234567.ogg
 
 6.  您可以通过修改配置文件ZaVoiceConfig.ini来修改语音文件或语音表文件所在的文件夹路径（相对或绝对路径）
 
