--- a/doc/使用说明.md
+++ b/doc/使用说明.md
@@ -41,18 +41,18 @@ Vita版追加剧情语音的外挂程序
 
 2.  一切准备就绪时，目录及文件结构大致如下：
 
-            ao.voice   -------- 文件夹，其下为\*.wav或\*.ogg（用于碧）。注意：这里不支持子目录
-        
-            ao.tbl     -------- 文件夹，其下为\*.tbl（用于碧）。注意：这里不支持子目录
-        
-            zero.voice -------- 文件夹，其下为\*.wav或\*.ogg（用于零）。注意：这里不支持子目录
-        
-            zero.tbl   -------- 文件夹，其下为\*.tbl（用于零）。注意：这里不支持子目录
-        
+            ao.voice   -------- 文件夹，其下为*.wav或*.ogg（用于碧）。注意：这里不支持子目录
+
+            ao.tbl     -------- 文件夹，其下为*.tbl（用于碧）。注意：这里不支持子目录
+
+            zero.voice -------- 文件夹，其下为*.wav或*.ogg（用于零）。注意：这里不支持子目录
+
+            zero.tbl   -------- 文件夹，其下为*.tbl（用于零）。注意：这里不支持子目录
+
             使用说明.md
-        
+
             ZeroAoVoiceTool.exe
-        
+
             ZaVoiceConfig.ini -- 配置文件
 
 3.  作为样例，已附带适用于零、碧各一套的完整语音表（.tbl）文件
