去除版本号

--- a/doc/使用说明.md
+++ b/doc/使用说明.md
@@ -1,4 +1,4 @@
-ZeroAoVoiceTool 0.1.0 使用说明
+ZeroAoVoiceTool 使用说明
 ==============================
 
 前言
@@ -50,6 +50,8 @@ Vita版追加剧情语音的外挂程序
             zero.tbl   -------- 文件夹，其下为*.tbl（用于零）。注意：这里不支持子目录
 
             使用说明.md
+            
+            openal32.dll ------ OpenAL库，如果您的计算机内已经安装了OpenAL库。这个文件可以删除（建议的操作）
 
             ZeroAoVoiceTool.exe
 
