--- a/doc/原理&问题&解决.md
+++ b/doc/原理&问题&解决.md
@@ -65,7 +65,16 @@ Vita版的语音编号，提取出来记录下来就可以了
 完成程序
 --------
 
-当两个步骤都找到解决方案时，剩下的就是用代码来实现了。具体请参考项目里源码，这里就不加赘述了。
+当两个步骤都找到解决方案时，剩下的就是用代码来实现了。
+
+具体请参考项目里源码，这里仅指出：
+
+- ZeroAoVoiceTool的实现方式是：在游戏进程中注入代码，将各个需要的地址记录下来；
+然后工具通过监视这些记录下来的地址的变化来得知语音播放的时机。
+
+- ZeroAoVoiceToolX的实现方式是：在游戏进程中注入代码，将各个需要的地址通过WindowsAPI
+PostMessage发送到工具的窗口句柄。在工具的消息循环中发现这些消息时，即说明需要播放语音。
+由于需要利用到消息循环，故将ZeroAoVoiceToolX设计为窗口程序。
 
 问题及解决法
 ------------
