--- a/doc/使用说明.md
+++ b/doc/使用说明.md
@@ -20,7 +20,7 @@ Vita版追加剧情语音的外挂程序
 
 2.  将各个scena文件（指的是scena文件夹下的.bin文件）对应的语音表文件(\*.tbl)，置于本工具所在目录的zero.tbl或ao.tbl文件夹下
 
-3.  运行游戏和本工具ZeroAoVoiceTool.exe（先后次序并不重要，但是若在游戏进行中运行本工具，本工具只会在载入下一个场景的时候开始生效）
+3.  运行游戏和本工具ZeroAoVoiceTool.exe **或者** ZeroAoVoiceToolX.exe（先后次序并不重要，但是若在游戏进行中运行本工具，本工具只会在载入下一个场景的时候开始生效）
 
 本工具的适用
 ------------
@@ -51,19 +51,23 @@ Vita版追加剧情语音的外挂程序
 
             使用说明.md
             
-            openal32.dll ------ OpenAL库，如果您的计算机内已经安装了OpenAL库。这个文件可以删除（建议的操作）
+            audiere.dll ------ 本工具使用的音频库
 
             ZeroAoVoiceTool.exe
+            
+            ZeroAoVoiceToolX.exe
 
-            ZaVoiceConfig.ini -- 配置文件
+            ZaVoiceConfig.ini -- 配置文件，用于配置语音或语音表文件的路径等
+            
+3.  关于ZeroAoVoiceTool与ZeroAoVoiceToolX的区别
 
-3.  作为样例，已附带适用于零、碧各一套的完整语音表（.tbl）文件
+            ZeroAoVoiceTool为控制台程序，ZeroAoVoiceToolX为窗口程序。两者在功能的实现方式上有所区别，但实现的功能基本一致。
 
-4.  并没有必要将本工具放置到游戏的安装目录下（当然即使您这么做了，也并无不良影响）
+4.  作为样例，已附带适用于零、碧各一套的完整语音表（.tbl）文件
 
-5.  关于语音文件转换后的文件名，原文件名为v1234567.at9的语音文件转换后的文件名需为v1234567.wav或v1234567.ogg
+5.  并没有必要将本工具放置到游戏的安装目录下（当然即使您这么做了，也并无不良影响）
 
-6.  您可以通过修改配置文件ZaVoiceConfig.ini来修改语音文件或语音表文件所在的文件夹路径（相对或绝对路径）
+6.  关于语音文件转换后的文件名，原文件名为v1234567.at9的语音文件转换后的文件名需为v1234567.wav或v1234567.ogg
 
 7.  配置ZaVoiceConfig.ini中的项目DisableOriginalVoice = 1
     可开启本工具的实验性功能，即禁用游戏原本剧情语音的功能（仅限碧之轨迹，仅限剧情语音，不包括语气语音）。若启动了本功能，即使退出了本工具，在重启游戏前，所作的改动将一直有效。
