--- a/doc/使用说明.md
+++ b/doc/使用说明.md
@@ -6,6 +6,17 @@ ZeroAoVoiceTool 使用说明
 
 本工具是个开源项目，基于GPLv3协议。您可以在[ZeroAoVoiceTool项目主页](https://github.com/ZhenjianYang/ZeroAoVoiceTool)获取这个有关这个项目的全部信息。
 
+本工具中使用的外部库如下：
+
+-   [Audiere](http://audiere.sourceforge.net/),
+    基于[LGPL协议](http://opensource.org/licenses/lgpl-license.html).
+    
+-   [Windows Template Library (WTL)](http://wtl.sourceforge.net/), 基于
+    [Microsoft Public License (MS-PL)](https://opensource.org/licenses/MS-PL).
+    
+-   [ini-parser](https://github.com/Poordeveloper/ini-parser), 基于
+    [MIT](https://tldrlegal.com/license/mit-license) 协议.
+
 本工具是做什么用的
 ------------------
 
@@ -16,64 +27,71 @@ Vita版追加剧情语音的外挂程序
 --------------
 
 1.  将PC游戏对应的PS
-    Vita版游戏的语音文件（解包各种.psarc文件后，talk文件夹下的所有.at9文件）导出，并转换为wav或ogg文件，并将转换之后的文件放到本工具所在目录的zero.voice(零)或ao.voice(碧)文件夹下。
+    Vita版游戏的语音文件（解包各种.psarc文件后，talk文件夹下的所有.at9文件）导出，并转换为wav或ogg文件（原文件名为v1234567.at9的语音文件转换后的文件名需为v1234567.wav或v1234567.ogg），并将转换之后的文件放到本工具所在目录的voice\zero(零)或voice\ao(碧)文件夹下。
 
-2.  将各个scena文件（指的是scena文件夹下的.bin文件）对应的语音表文件(\*.tbl)，置于本工具所在目录的zero.tbl或ao.tbl文件夹下
-
-3.  运行游戏和本工具ZeroAoVoiceTool.exe **或者** ZeroAoVoiceToolX.exe（先后次序并不重要，但是若在游戏进行中运行本工具，本工具只会在载入下一个场景的时候开始生效）
+2.  运行游戏和本工具ZeroAoVoiceTool.exe（先后次序并不重要，但是若在游戏进行中运行本工具，本工具只会在载入下一个场景的时候开始生效）
 
 本工具的适用
 ------------
 
 目前，本工具适用于：
 
-1.  《英雄传说：零之轨迹》简体中文版，版本1.1。（1.1版的存档界面中，存档编号为5位数，并且存档数最多为1000；而1.0版为4位数且存档数最多为100。并且，1.1版的配置文件支持修改手柄键位）
+1.  《英雄传说：零之轨迹》简体中文版，1.0、1.1以及JOYO平台版。
 
-2.  《英雄传说：碧之轨迹》简体中文版，版本1.0。
+2.  《英雄传说：碧之轨迹》简体中文版，1.0以及JOYO平台版。
 
-以上适用项目均指游戏在中国大陆的发行商北京欢乐百世科技有限公司发行的简体中文版游戏的原始版本（零之轨迹需要1.1补丁，[官方补丁下载地址](http://pan.baidu.com/s/1jGjy62M)），其他版本，或在上述版本上进行过修改的
-版本均无法保证本工具的正常运行。另外，北京欢乐百世科技有限公司于近日推出了这两个游戏的JOYO平台版，目前尚不清楚本工具对该版本的支持情况。
+以上适用项目均指游戏在中国大陆的发行商北京欢乐百世科技有限公司发行的简体中文版游戏。其他版本，或在上述版本上进行过修改的版本均无法保证本工具的正常运行。
 
-注意事项：
-----------
+游戏主界面中选项的说明：
+--------------------
 
-1.  本工具仅是一个播放语音的外挂程序，您需要自行准备好通过合法途径获得的PC版游戏本体用于运行游戏，以及PSVita版游戏用于导出语音文件。请勿向我们咨询游戏本体或语音文件的获得方法。另外，本工具不会对您的游戏作任何改动，本工具的功能的实现也仅限于本工具运行的时候。
+- **禁用原有剧情语音** 这个选项仅对碧之轨迹有效，若勾选将禁用原有的剧情语音。对于零之轨迹及碧之轨迹的其他语音，本工具暂无法将其屏蔽。使用时，可能会出现本工具和原游戏同时发出语音的情形。（两个游戏中均有关闭战斗语音以外的语音的选项）
 
-2.  一切准备就绪时，目录及文件结构大致如下：
+- **音量** 调整播放的语音音量（0~100），默认为最大
 
-            ao.voice   -------- 文件夹，其下为*.wav或*.ogg（用于碧）。注意：这里不支持子目录
+- **记录窗口大小及位置** 勾选此项时，下次开启程序时窗口会保持前一次关闭时的大小及位置；否则，窗口的大小及位置会重置
 
-            ao.tbl     -------- 文件夹，其下为*.tbl（用于碧）。注意：这里不支持子目录
+游戏主界面中的选项设置会保存于ZaConfig.ini，若删除该文件，所有选项均会重置
 
-            zero.voice -------- 文件夹，其下为*.wav或*.ogg（用于零）。注意：这里不支持子目录
+关于ZaData.ini以及ZaDataEx.ini：
+------------------------------
 
-            zero.tbl   -------- 文件夹，其下为*.tbl（用于零）。注意：这里不支持子目录
+本工具同时支持多个版本的游戏，不同版本的游戏运行参数不同，这两个文件则用于保存（配置）这些参数。错误的参数不仅会导致本工具无法正常运行，还有可能导致游戏无法正常运行，所以**在一般情况下，您没有必要调整这些配置**。
 
-            使用说明.md
-            
-            audiere.dll ------ 本工具使用的音频库
+**如果确实有调整的必要，也建议不要修改ZaData.ini；请修改ZaDataEx.ini，ZaDataEx.ini中的配置项有更高的优先级。**
 
-            ZeroAoVoiceTool.exe
-            
-            ZeroAoVoiceToolX.exe
+文件中的配置项以组为单位，每一组代表一个游戏（版本）的配置，对于每组中各项目的说明如下：
 
-            ZaVoiceConfig.ini -- 配置文件，用于配置语音或语音表文件的路径等
-            
-3.  关于ZeroAoVoiceTool与ZeroAoVoiceToolX的区别
+**[Zero]** 该组配置项的名字为**Zero**，各组配置项的名字应该是唯一的
 
-            ZeroAoVoiceTool为控制台程序，ZeroAoVoiceToolX为窗口程序。两者在功能的实现方式上有所区别，但实现的功能基本一致。
+**Enable** 设置为1表示启用该组配置；设置为0表示不启用该组配置
 
-4.  作为样例，已附带适用于零、碧各一套的完整语音表（.tbl）文件
+**Comment** （非必须）该组配置项的说明文本
 
-5.  并没有必要将本工具放置到游戏的安装目录下（当然即使您这么做了，也并无不良影响）
+**Title**，**FeatureAddr**，**FeatureValue** 当游戏标题==Title，同时dword ptr[FeatureAddr]==FeatureValue时，使用该组配置项。若多个配置项满足，其顺序为：ZaDataEx.ini中配置优先于ZaData.ini，同一文件中则按照先后顺序。
 
-6.  关于语音文件转换后的文件名，原文件名为v1234567.at9的语音文件转换后的文件名需为v1234567.wav或v1234567.ogg
+**OpAddrJcLoadScena**~**PtrPostMessageA** 关于这9个参数，请参考[doc/解决原理说明](https://github.com/ZhenjianYang/ZeroAoVoiceTool/blob/master/doc/%E5%8E%9F%E7%90%86%26%E9%97%AE%E9%A2%98%26%E8%A7%A3%E5%86%B3.md)中原理部分
 
-7.  配置ZaVoiceConfig.ini中的项目DisableOriginalVoice = 1
-    可开启本工具的实验性功能，即禁用游戏原本剧情语音的功能（仅限碧之轨迹，仅限剧情语音，不包括语气语音）。若启动了本功能，即使退出了本工具，在重启游戏前，所作的改动将一直有效。
+**VoiceIdLegnth** 语音ID的长度。原始的语音文件为v1234567.at9，则语音ID为1234567，故长度为7
 
-8.  对于零之轨迹及碧之轨迹的其他语音，本工具暂无法将其屏蔽。使用时，可能会出现本工具和原游戏同时发出语音的情形。（两个游戏中均有关闭战斗语音以外的语音的选项）
+**VoiceFileName** 语音文件的前缀。原始的语音文件为v1234567.at9，则其前缀为v
 
-9.  本工具仍处于待完善阶段，可能存在诸多问题，建议您在游戏过程中多加存档，避免损失。
+**VoiceFileDir** 语音文件所在目录。
+
+**VoiceTablesDir** 语音表文件所在目录。
+
+**VoiceTablesDirEx** （非必须）额外的语音表文件所在目录。注意，若VoiceTablesDirEx与VoiceTablesDir下有相同的文件，则以VoiceTablesDirEx下的文件为准。
+
+**Base** （非必须）用于便捷设置的项目。设置Base=Zero，表示未在该组配置项中出现的项目，其配置均与名为“Zero”的配置项组中一致。样例的ZaDataEx.ini给出的配置项组是除语音表使用1.0版语音表外，其余配置均与1.1版零之轨迹一致。注意，Base=后的配置项组名称必须是同文件中已出现过的；例外为ZaDataEx.ini中可使用ZaData.ini中的配置项组。另外，使用Base不会影响Enable与Comment。
 
 
+关于部分场景无语音：
+-----------------
+
+此问题分为以下几种情况：
+
+1. PSVita版游戏本身无语音。如支援请求（包括《零之轨迹》的紧急支援）在PSVita版游戏中是无语音的
+
+2. PC版《零之轨迹》1.1更新补丁未打完整。1.1更新补丁不仅更新了exe文件，也更新了几个scena文件。若遗漏了scena文件的更新，则会出现使用的语音表（1.1版）与scena文件（1.0版）不匹配而导致这些场景无语音的情况。请更新scena文件到1.1版，或者通过将ZaDataEx.ini中[Zero 1.1 with 1.0 scena]下的Enable设置为1以在1.1版零之轨迹中使用1.0版语音表。
+
+3. 使用了其他MOD。部分MOD会修改scena文件导致其与语音表不匹配导致场景无语音。只能通过删除MOD或者自行根据MOD中的scena文件建立新的语音表文件来解决。
